--- a/Order-8001/src/main/resources/application.yml
+++ b/Order-8001/src/main/resources/application.yml
@@ -4,26 +4,22 @@ server:
 spring:
   application:
     name: order-service-8001
-
-datasource:
-  type: com.alibaba.druid.pool.DruidDataSource # 当前数据源操作类型
-  # driver-class-name: com.mysql.cj.jdbc.Driver # mysql驱动类
-  driver-class-name: org.git.mm.mysql.Driver
-  url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=GMT%2B8
-  username: root
-  password: gwang
-
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=GMT%2B8
+    username: root
+    password: gwang
 
 mybatis:
-  mapper-locations: classpath*:mapper/*.xml
   type-aliases-package: com.wanggang.springcloud.entity
+  mapper-locations: classpath*:mapper/*.xml
 
 eureka:
+  instance:
+    hostname: OrderService8001
   client:
-    #表示是否将自己注册进EurekaServer默认为true
-    register-with-eureka: true
-    #是否从EurekaServer抓取已有的注册消息，默认为true，单节点无所谓，集群必须设置为true才能配合ribbon使用负载均衡
     fetch-registry: true
+    register-with-eureka: true
     service-url:
-    #defaultZone: http://localhost:7001/eureka
-    defaultZone: http://localhost:7001/eureka/
+      defaultZone: http://localhost:7001/eureka/
