--- a/Eureka-Server-7001/src/main/resources/application.yml
+++ b/Eureka-Server-7001/src/main/resources/application.yml
@@ -1,17 +1,27 @@
 server:
   port: 7001
 
+spring:
+  application:
+    name: Eureka-Server-7001
+
 eureka:
   instance:
-    hostname: eurekaServer7001.com #eureka服务端的实例名称
-    client:
-      # false表示不向注册中心注册自己
-      register-with-eureka: false
-      # false表示自己端就是注册中心,我的职责就是维护服务实例,并不需要检索服务
-      fetch-registry: false
-      service-url:
-        # 设置与Eureka Server交互的地址查询服务和注册服务都需要依赖这个地址
-        # 单机 defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
-        # 相互注册
-        #defaultZone: http://eurekaServer7001.com:7001/eureka/
-        defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+    # 设置主机url，主机ip地址对应
+    hostname: eurekaServer7001.com
+  client:
+    # false表示不向注册中心注册自己
+    register-with-eureka: false
+    # false表示自己端就是注册中心,我的职责就是维护服务实例,并不需要检索服务
+    fetch-registry: false
+    # 设置与Eureka Server交互的地址查询服务和注册服务都需要依赖这个地址
+    service-url:
+      # 单机
+      # defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+      # 集群 EurekerServer 相互注册
+      defaultZone: http://eurekaServer7002.com:7002/eureka/
+  server:
+    # 关闭自我保护模式，保证不可用服务被及时删除，默认 true
+    enable-self-preservation: true
+    # 时间间隔
+    eviction-interval-timer-in-ms: 2000
