--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,10 @@
         <module>User-1002-Zookeeper</module>
         <module>User-1003-Ribbon</module>
         <module>User-1004-Feign</module>
+        <module>Order-8005-Hystrix</module>
+        <module>User-1005-Hystrix</module>
+        <module>Hystrix-Dashboard-9001</module>
+        <module>Gateway-9527</module>
     </modules>
 
     <!-- 统一管理jar包版本 -->
