--- a/Config-Server-3344/pom.xml
+++ b/Config-Server-3344/pom.xml
@@ -25,6 +25,12 @@
             <artifactId>spring-cloud-config-server</artifactId>
         </dependency>
 
+        <!-- bus MQ -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bus-amqp</artifactId>
+        </dependency>
+
         <!--eureka client-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
